force-app/main/default/objects/B2B_Order_Type_Mapping__mdt/B2B_Order_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>B2B Order Type Mapping</label>
    <pluralLabel>B2B Order Type Mappings</pluralLabel>
</CustomObject>