force-app/main/default/objects/B2B_Order_Type_Mapping__mdt/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>will be used when no exact part class matches found</description>
    <inlineHelpText>will be used when no exact part class matches found</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>