force-app/main/default/objects/B2B_Order_Type_Mapping__mdt/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>