force-app/main/default/objects/B2B_Order_Type_Mapping__mdt/fields/Part_Classes__c.field-meta.xml
<CustomField>
    <fullName>Part_Classes__c</fullName>
    <description>new line separated list of part classes that determine whats the order type</description>
    <inlineHelpText>new line separated list of part classes that determine whats the order type</inlineHelpText>
    <label>Part Classes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>